fix: DSC logo was being overlapped by navbar in desktop view

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -162,11 +162,16 @@ body {
 }
 
 #hometop-container {
+    margin-top: 15px;
     text-align: center;
     position: absolute;
     top: 52%;
     transform: translateY(-50%);
     z-index:1000;
+}
+
+#background-header-home{
+    margin-top: 120px;
 }
 
 #top_row
